--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+# Configure MySQL database
+server.port=3333
+spring.datasource.url=jdbc:mysql://localhost:3306/tourGo?useSSL=false&serverTimezone=Europe/Kiev
+#spring.datasource.url=jdbc:mysql://localhost:3306/currency?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+spring.datasource.username=root
+spring.datasource.password=1356
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
+# Enable Hibernate/JPA auto-configuration
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+#spring.thymeleaf.check-template-location=false
+spring.mvc.view.prefix=/resources/templates/
+spring.mvc.view.suffix=.html
+#spring.batch.job.enabled = false
+# Set the application name
+spring.application.name=Application
