made dinamical dropdown using js

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.thymeleaf.enabled=true
 #spring.thymeleaf.check-template-location=false
 spring.mvc.view.prefix=/resources/templates/
 spring.mvc.view.suffix=.html
+#spring.mvc.static-path-pattern=/static/**
 #spring.batch.job.enabled = false
 # Set the application name
 spring.application.name=Application
