--- a/pom.xml
+++ b/pom.xml
@@ -77,23 +77,30 @@
 			<artifactId>dtd-parser</artifactId>
 			<version>1.5.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.jumpmind.symmetric/symmetric-ddl -->
 		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>bootstrap</artifactId>
-			<version>3.3.6</version>
+			<groupId>org.jumpmind.symmetric</groupId>
+			<artifactId>symmetric-ddl</artifactId>
+			<version>2.5.13</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>bootstrap-datepicker</artifactId>
-			<version>1.0.1</version>
-		</dependency>
+		<!--		<dependency>-->
+<!--			<groupId>org.webjars</groupId>-->
+<!--			<artifactId>bootstrap</artifactId>-->
+<!--			<version>3.3.6</version>-->
+<!--		</dependency>-->
 
-		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>jquery</artifactId>
-			<version>1.9.1</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.webjars</groupId>-->
+<!--			<artifactId>bootstrap-datepicker</artifactId>-->
+<!--			<version>1.0.1</version>-->
+<!--		</dependency>-->
+
+<!--		<dependency>-->
+<!--			<groupId>org.webjars</groupId>-->
+<!--			<artifactId>jquery</artifactId>-->
+<!--			<version>1.9.1</version>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
